# cppGame

./: .gitignore  CMakeLists.txt  CMakeLists_tmxlite.txt.in  README.md
doc/: umlClass.gaphor
doc/sampleProjects/: README.md
doc/sampleProjects/ExempleImguiSFML/: CMakeLists.txt
doc/sampleProjects/ExempleImguiSFML/src/main/: CMakeLists.txt  main.cpp
doc/sampleProjects/SampleSFML/: CMakeLists.txt
doc/sampleProjects/SampleSFML/src/main/: CMakeLists.txt  main.cpp
doc/sampleProjects/Tmxlite_SampleSFML/: CMakeLists.txt  README.txt
doc/sampleProjects/Tmxlite_SampleSFML/src/core/: CMakeLists.txt  SFMLOrthogonalLayer.h  myMain.cpp
doc/sampleProjects/Tmxlite_SampleSFML/src/main/: CMakeLists.txt  main.cpp
doc/sampleProjects/Tmxlite_SampleSFML/src/test/: CMakeLists.txt  unitTests.cpp
ressources/texture/: Sprite-0001.ase  assiette.ase  plant01.ase  testTileset.ase
ressources/tileMap/: grassPNJ.tsx  levelMap1.tiled-session  levelTileMap.tsx  testTerrain.tsx  testTileMap.tmx
src/core/: CMakeLists.txt  SFMLOrthogonalLayer.h  entityManager.cpp  entityManager.hpp  gameDatas.hpp  gameEvents.cpp  gameEvents.hpp  gameInputs.cpp  gameInputs.hpp  gameManager.cpp  gameManager.hpp  inputManager.cpp  inputManager.hpp  myMain.cpp  pnjManager.hpp
src/core/behaviourVisitor/: CMakeLists.txt  coucouVisitor.cpp  coucouVisitor.hpp  defaultVisitor.cpp  defaultVisitor.hpp  spriteClickedVisitor.cpp  spriteClickedVisitor.hpp
src/core/entities/: CMakeLists.txt  Entity.cpp  Entity.hpp  Human.cpp  Human.hpp  Player.cpp  Player.hpp  animatedSprite.cpp  animatedSprite.hpp  crops.cpp  crops.hpp  defaultVisitor.cpp  defaultVisitor.hpp  entityState.cpp  entityState.hpp  ressourcesLoader.cpp  ressourcesLoader.hpp
src/main/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt  unitTests.cpp
